--- a/app/views/business.html
+++ b/app/views/business.html
@@ -1,1 +1,4 @@
+<h2>{{business.title}}</h2>
+<h4>{{business.subtitle}}</h4>
+<img src="{{business.cover['630x420']}}" />
 <div marked="markdown" class="mc-lg" ng-show="markdown"></div>
