--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,8 @@
 <div class="row">
   <h4>Experiences in Bansko</h4>
-
-  <pre>{{tags | json}}</pre>
-  <!--
   <ul class="tag-cloud">
     <li ng-repeat="tag in tags">
-      <a ng-href="/#!/{{tag.text}}" class="tag-{{tag.size}}">{{tag.text}}</a>
+      <a ng-href="/#!/tag/{{tag.text}}" class="tag-{{tag.size}}">{{tag.text}}</a>
     </li>
   </ul>
-  -->
 </div>
