--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <h4>Experiences in Bansko</h4>
   <ul class="tag-cloud">
     <li ng-repeat="tag in tags">
-      <a ng-href="/#!/tag/{{tag.text}}" class="tag-{{tag.size}}">{{tag.text}}</a>
+      <a ng-href="/#!/tag/{{tag.text}}" class="tag-{{tag.size}}" title="{{tag.count}}">{{tag.text}}</a>
     </li>
   </ul>
 </div>
