700 px cover images

--- a/app/views/business.html
+++ b/app/views/business.html
@@ -1,6 +1,6 @@
 <h2>{{business.title}}</h2>
 <h4>{{business.subtitle}}</h4>
-<img src="{{business.cover['630x420']}}" ng-show="business.cover['630x420']" />
+<img src="{{business.cover['700']}}" ng-show="business.cover['700']" />
 <div marked="markdown" class="mc-lg" ng-show="markdown"></div>
 <ul class="business-contact">
     <li ng-repeat="telephone in business.contact.telephone" class="telephone">
