--- a/app/views/business.html
+++ b/app/views/business.html
@@ -2,6 +2,7 @@
 <h4>{{business.subtitle}}</h4>
 <img src="{{business.cover['700']}}" ng-show="business.cover['700']" />
 <div marked="markdown" class="mc-lg" ng-show="markdown"></div>
+<h4>Contact</h4>
 <ul class="business-contact">
     <li ng-repeat="telephone in business.contact.telephone" class="telephone">
         {{telephone}}
