--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,21 @@
 <div class="row">
-  <h4>Experiences in Bansko</h4>
+  <h2>Welcome!</h2>
+  <img src="images/vasilashki-lakes-720x405.jpg" class="img-rounded" alt="Vasilashki lakes in the Pirin Mountains, Bulgaria" />
+</div>
+<div class="row" style="margin-top: 20px;">
+  <p>
+    Bansko Directory is a non profit website listing activities, small businesses and service providers in or within easy reach of Bansko.
+    It exists to promote the many wonderful and compelling reasons to visit the town and region in all seasons.
+  </p>
+  <p>
+    Our special focus is on outdoor and healthy activities that take advantage of our beautiful scenery, rivers, mountains and lakes.
+  </p>
+  <p>
+    If you wish to list your business or service for free, you can fill in this form: <a href="https://goo.gl/forms/POL7gQDLzeq4xBBH3">create a new listing</a>.
+  </p>
+</div>
+<div class="row">
+  <h4>Things to enjoy in Bansko or nearby:</h4>
   <ul class="tag-cloud">
     <li ng-repeat="tag in tags">
       <a ng-href="/#!/tag/{{tag.text}}" class="tag-{{tag.size}}" title="{{tag.count}}">{{tag.text}}</a>
