--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
     Our special focus is on outdoor and healthy activities that take advantage of our beautiful scenery, rivers, mountains and lakes.
   </p>
   <p>
-    If you wish to list your business or service for free, you can fill in this form: <a href="https://goo.gl/forms/POL7gQDLzeq4xBBH3">create a new listing</a>.
+    If you wish to list your business or service for free, you can fill in this form: <a href="https://goo.gl/forms/POL7gQDLzeq4xBBH3">create a new listing</a>. Alternatively, if you know how to use github and would like your listing to go live faster, you may submit a pull request at: <a href="https://github.com/bansko/directory">github.com/bansko/directory</a> (see recent commits for an <a href="https://github.com/bansko/directory/commit/5edf7b6">example</a> of adding a listing).
   </p>
 </div>
 <div class="row">
